# singing-sand

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION.md  SS_WAVEFORM_HANDOFF.md  index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
crates/ss-api/: Cargo.toml
crates/ss-api/src/: lib.rs
crates/ss-app/: Cargo.toml
crates/ss-app/src/: main.rs  settings.rs
crates/ss-app/ui/: main.slint  player-panel.slint  settings.slint  sidebar.slint  track-list.slint  types.slint
crates/ss-audio/: Cargo.toml
crates/ss-audio/src/: analyze.rs  engine.rs  lib.rs  source.rs
crates/ss-core/: Cargo.toml
crates/ss-core/src/: audio.rs  error.rs  lib.rs  track.rs
crates/ss-db/: Cargo.toml
crates/ss-db/migrations/: 0001_init.sql  0002_waveforms.sql  0003_playlists_tags.sql  0004_album_art.sql  0005_track_notes.sql  0006_bpm_waveform_v2.sql  0007_settings.sql  0008_art_thumbnails.sql  0009_waveform_raw.sql  0010_tag_colors.sql  0011_playlist_groups.sql
crates/ss-db/src/: lib.rs
crates/ss-library/: Cargo.toml
crates/ss-library/src/: lib.rs
crates/ss-waveform/: Cargo.toml
crates/ss-waveform/src/: lib.rs  render.rs  renderer.rs  settings.rs  types.rs
src/: App.module.scss  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analysis.rs  dtos.rs  events.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/commands/: directories.rs  library.rs  mod.rs  playlists.rs  settings.rs  tags.rs  tracks.rs  transport.rs  waveform.rs
src/components/AnalysisOverlay/: AnalysisOverlay.module.scss  AnalysisOverlay.tsx
src/components/DuplicateModal/: DuplicateModal.module.scss  DuplicateModal.tsx
src/components/PlayerPanel/: NowPlaying.tsx  PlayerPanel.module.scss  PlayerPanel.tsx  Waveform.tsx
src/components/SearchBar/: SearchBar.module.scss  SearchBar.tsx
src/components/SettingsDrawer/: SettingsDrawer.module.scss  SettingsDrawer.tsx
src/components/Sidebar/: Sidebar.module.scss  Sidebar.tsx
src/components/TagAssignmentPanel/: TagAssignmentPanel.module.scss  TagAssignmentPanel.tsx
src/components/TagChip/: TagChip.module.scss  TagChip.tsx
src/components/TrackList/: ExpandedTrackRow.tsx  TrackList.module.scss  TrackList.tsx  TrackRow.tsx
src/hooks/: useAppInteractions.ts  useNavigation.ts  useTauriEvents.ts
src/stores/: libraryStore.ts  playerStore.ts  sidebarStore.ts  uiStore.ts
src/styles/: _reset.scss  _variables.scss  global.scss
