[workspace]
members = [
    "crates/ss-core",
    "crates/ss-db",
    "crates/ss-audio",
    "crates/ss-library",
    "crates/ss-api",
    "crates/ss-app",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1.44", features = ["full"] }
# error handling
anyhow    = "1.0"
thiserror = "2.0"
# serialization
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
postcard     = { version = "1.1", features = ["alloc"] }
# logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flume              = "0.11"
