[workspace]
members = [
    "crates/ss-core",
    "crates/ss-db",
    "crates/ss-audio",
    "crates/ss-library",
    "crates/ss-api",
    "crates/ss-waveform",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
# async runtime
tokio = { version = "1.44", features = ["full"] }
# error handling
anyhow    = "1.0"
thiserror = "2.0"
# serialization
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
postcard     = { version = "1.1", features = ["alloc"] }
# logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
flume              = "0.11"
# database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
# library scanning
walkdir = "2"
lofty   = "0.22"
# image decoding
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# GUI
slint = "1"
# waveform rendering
ss-waveform = { path = "crates/ss-waveform" }
