[package]
name = "singing-sand"
version = "0.1.0"
edition = "2021"

[lib]
name = "singing_sand_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "singing-sand"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow     = { workspace = true }
flume      = { workspace = true }
image      = { workspace = true }
ss-core     = { path = "../crates/ss-core" }
ss-audio    = { path = "../crates/ss-audio" }
ss-db       = { path = "../crates/ss-db" }
ss-library  = { path = "../crates/ss-library" }
ss-waveform = { workspace = true }
rfd = "0.15"
