[package]
name    = "ss-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "singing-sand"
path = "src/main.rs"

[dependencies]
ss-core   = { path = "../ss-core" }
ss-audio  = { path = "../ss-audio" }
anyhow    = { workspace = true }
flume     = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
