[package]
name    = "ss-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "singing-sand"
path = "src/main.rs"

[dependencies]
ss-core     = { path = "../ss-core" }
ss-audio    = { path = "../ss-audio" }
ss-db       = { path = "../ss-db" }
ss-library  = { path = "../ss-library" }
ss-waveform = { workspace = true }
anyhow     = { workspace = true }
image      = { workspace = true }
flume      = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
slint      = { workspace = true }
rfd        = "0.15"

[build-dependencies]
slint-build = "1"
