[package]
name    = "ss-library"
version = "0.1.0"
edition = "2021"

[dependencies]
ss-core = { path = "../ss-core" }
ss-db   = { path = "../ss-db" }
anyhow  = { workspace = true }
tracing = { workspace = true }
tokio   = { workspace = true }
walkdir = { workspace = true }
lofty   = { workspace = true }
image   = { workspace = true }
notify  = "6"
